2005-06-17  Christopher Faylor  <cgf@timesys.com>

	* wincap.h (wincaps::detect_win16_exe): Declare.
	(wincapc::detect_win16_exe): Implement.
	* wincap.cc: Populate detect_win16_exe where appropriate.
	* spawn.cc (spawn_guts): Only go out of the way to detect 16-bit apps
	on systems which are flummoxed by them.

2005-06-17  Christopher Faylor  <cgf@timesys.com>

	* spawn.cc (spawn_guts): Detect when executing a 16-bit application and
	avoid setting the process pipe since this causes conniptions in Windows
	9x.

2005-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (inet_pton): Export.
	(inet_ntop): Export.
	* net.cc (cygwin_inet_pton): Implement inet_pton for AF_INET for now.
	(cygwin_inet_ntop): Implement inet_ntop for AF_INET for now.
	* include/arpa/inet.h (inet_pton): Declare.
	(inet_ntop): Declare.
	* include/cygwin/version.h: Bump API minor number.

2005-06-17  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_union): Add missing members corresponding to
	fhandler_fifo and fhandler_netdrive.

2005-06-16  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (statvfs): Handle the case when GetDiskFreeSpaceEx
	succeeds but GetDiskFreeSpace fails by faking bytes-per-sector and
	sectors-per-cluster values.

2005-06-15  Christopher Faylor  <cgf@timesys.com>

	* cygthread.cc (cygthread::detach): Fix debugging output.
	* dcrt0.cc (dll_crt0_1): Create signal_arrived early -- before any
	filename manipulation.
	* sigproc.cc (sigproc_init): Don't create signal_arrived here.
	* fork.cc (fork_child): Ditto.
	* sigproc.h (create_signal_arrived): Declare.

2005-06-14  Christopher Faylor  <cgf@timesys.com>

	* path.cc (path_conv::check): Always reset to FH_FS when component != 0
	and FH_NETDRIVE to fix problems with strict case checking.

2005-06-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::recvmsg): Avoid SEGV in OpenSSH
	when trying to pass file descriptor by setting msg->msg_accrightslen
	to 0.
