@@ -258,12 +258,13 @@ details. */
       129: Export mkdtemp.
       130: Export strtoimax, strtoumax, llabs, imaxabs, lldiv, imaxdiv.
       131: Export inet_ntop, inet_pton.
+      132: Add GLOB_LIMIT flag to glob.
      */
 
      /* Note that we forgot to bump the api for ualarm, strtoll, strtoull */
 
 #define CYGWIN_VERSION_API_MAJOR 0
-#define CYGWIN_VERSION_API_MINOR 131
+#define CYGWIN_VERSION_API_MINOR 132
 
      /* There is also a compatibity version number associated with the
 	shared memory regions.  It is incremented when incompatible
