@@ -90,6 +90,7 @@ typedef struct {
 #define	GLOB_NOMAGIC	0x0200	/* GLOB_NOCHECK without magic chars (csh). */
 #define	GLOB_QUOTE	0x0400	/* Quote special chars with \. */
 #define	GLOB_TILDE	0x0800	/* Expand tilde names from the passwd file. */
+#define	GLOB_LIMIT	0x1000	/* Limit memory used by matches to ARG_MAX */
 #endif
 
 #define	GLOB_NOSPACE	(-1)	/* Malloc call failed. */
